--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Configura a visualização para dispositivos móveis, garantindo que a página seja dimensionada corretamente -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Define o título da página que aparece na aba do navegador -->
-    <title>Pedra, Papel e Tesoura Jogo</title>
+    <title>Pedra, Papel e Tesoura Jogooo</title>
     <!-- Link para o arquivo CSS externo que estiliza a página -->
     <link rel="stylesheet" href="style.css">
 </head>
