Testando Jamily testando

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Define o título da página que aparece na aba do navegador -->
     <title>Pedra, Papel e Tesoura Jogooo</title>
     <!-- Link para o arquivo CSS externo que estiliza a página -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.oi">
 </head>
 <body>
     <!-- Div principal que contém o conteúdo do jogo -->
